<?xml version="1.0"?>
<package format="2">
    <name>lightning</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="gao.xiang.thu@gmail.com">gaoxiang</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    
    <depend>scrubber_common</depend>
    <depend>agibot_robot</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf</depend>
    <depend>tf_conversions</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>message_filters</depend>
    <depend>visualization_msgs</depend>
    <depend>livox_ros_driver</depend>
    <depend>common_msgs</depend>
    <depend>driver_msgs</depend>
    
</package>
